Bug 431153 - Crash in MessageComposer::MessageFactoryNG::createForwardDigestMIME() when trying to forward a group of emails
Summary: Crash in MessageComposer::MessageFactoryNG::createForwardDigestMIME() when tr...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 5.16.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-04 17:14 UTC by Bernhard E. Reiter
Modified: 2021-01-06 09:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2021-01-04 17:14:21 UTC
SUMMARY

Forwarding as MIME digest crashes kmail.

STEPS TO REPRODUCE
1. select three emails (I had them in the INBOX and three in a row) 
2. press "f" for forwarding them
3. answer as MIME digest by the upcoming pop-up dialog

OBSERVED RESULT

Crash 
Application: Kontact (kontact), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f90d74463d1 in KMime::Headers::Generics::Parametrized::setParameter(QString const&, QString const&) () at /usr/lib64/libKF5Mime.so.5
#5  0x00007f90cce78d9d in MessageComposer::MessageFactoryNG::createForwardDigestMIME(QVector<Akonadi::Item> const&) () at /usr/lib64/libKF5MessageComposer.so.5
#6  0x00007f90ce07b69c in  () at /usr/lib64/libkmailprivate.so.5

EXPECTED RESULT
Composer opens with the three emails attached.


SOFTWARE/OS VERSIONS
GNU/Linux/KDE Plasma: OpenSuse 15.1 (with new KDE repos)  
(available in About System)
KDE Plasma Version: 5.20.4 lp151.567.1
KDE Frameworks Version:  5.77.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

The problem could be reproduced with three simple text messages.
(As well as with others)
Comment 1 Laurent Montel 2021-01-05 06:18:40 UTC
Git commit 3ab9029f79f1eb0d6dd99b262edcbcc8f21ff57b by Laurent Montel.
Committed on 05/01/2021 at 06:18.
Pushed by mlaurent into branch 'release/20.12'.

Fix Bug 431153 - Crash in MessageComposer::MessageFactoryNG::createForwardDigestMIME() when trying to forward a group of emails

FIXED-IN: 5.16.2

M  +1    -1    messagecomposer/src/helper/messagefactoryng.cpp

https://invent.kde.org/pim/messagelib/commit/3ab9029f79f1eb0d6dd99b262edcbcc8f21ff57b
Comment 2 Bernhard E. Reiter 2021-01-05 13:54:15 UTC
Thanks, Laurent!
(A happy new year to you!)