Fix Bug 431153 - Crash in MessageComposer::MessageFactoryNG::createForwardDigestMIME() when trying to forward a group of emails

FIXED-IN: 5.16.2
BUG: 431153